--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ authors = ["Hadeel H Al-Hawajreh <hadeelhhawajreh@gmail.com>"]
 python = "^3.9"
 jupyterlab = "^2.2.9"
 pandas = "^1.1.5"
+matplotlib = "^3.3.3"
+sklearn = "^0.0"
+numpy = "^1.19.4"
 
 [tool.poetry.dev-dependencies]
 
